tests/diagnostics/catalog/snapshots/ir/IR0044.snap
error[IR0044]: IR_E_LIFETIME_TOO_SHORT
 --> tests/diagnostics/catalog/sources/ir/IR0044.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0044
  = help: keep IR validation diagnostics structured and catalog-backed
